@@ -1,3 +1,5 @@
+    ADDED: Synchronizer-results: drag [left], SHIFT+drag [right],
+           Copy left/right selected items to clipboard
     ADDED: Locate-results: dragging items, copy to clipboard (CTRL+C)
     ADDED: Searcher-results: dragging items, copy to clipboard (CTRL+C)
     ADDED: Support for useraction placeholders in Krusader's commandline
